Fixed footer css. Not off-center anymore.

--- a/src/main/webapp/css/styles.css
+++ b/src/main/webapp/css/styles.css
@@ -128,7 +128,6 @@ body {
 /*Footer styles*/
 
 footer {
-  position: absolute;
   bottom: 0;
   width: 100%;
   padding: 1em;
